# play_around

./: .clang-format  .gitignore  .nvim.lua  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.lua  comp.bat  compile.bat  compile_commands.json  set_env.lua
include/: debug.h  function.h  structs.h  vk_app.h
lua_scripts/: build.lua  compile_shaders.lua  reload_commands.lua  run.lua  set_up.lua
resources/shaders/: shader.vert
shaders/: shader.vert
src/: alternative.cpp  debug.cpp  function.cpp  main.c  main.cpp  vk_app.cpp
src/engine/: debug.cpp  debug.h  engine_lib.cpp  engine_lib.h  pipeline.cpp  pipeline.h  render_pipeline.cpp  render_pipeline.h  structs.h  swapchain.cpp  swapchain.h  types.h  vk_commands.cpp  vk_commands.h  vk_tools.cpp  vk_tools.h  window.cpp  window.h
